--- a/cookbooks/moodle_opsworks/templates/httpd.conf
+++ b/cookbooks/moodle_opsworks/templates/httpd.conf
@@ -55,6 +55,10 @@ Listen 80
 #
 Include conf.modules.d/*.conf
 
+# Include SSL config if present
+<IfModule mod_ssl.c>
+    Include conf.d/ssl.conf
+</IfModule>
 #
 # If you wish httpd to run as a different user or group, you must run
 # httpd as root initially and it will switch.
