--- a/cookbooks/moodle_opsworks/templates/ssl.conf
+++ b/cookbooks/moodle_opsworks/templates/ssl.conf
@@ -1,6 +1,11 @@
 LoadModule ssl_module modules/mod_ssl.so
 Listen 443
 <VirtualHost *:443>
+	<Proxy *>
+		Order deny,allow
+		Allow from all
+	</Proxy>
+
 	SSLEngine             on
 	SSLCertificateFile    "/etc/pki/tls/certs/server.crt"
 	SSLCertificateKeyFile "/etc/pki/tls/certs/server.key"
@@ -12,5 +17,9 @@ Listen 443
 	Header always set Strict-Transport-Security "max-age=63072000; includeSubdomains; preload"
 	Header always set X-Frame-Options DENY
 	Header always set X-Content-Type-Options nosniff
-</VirtualHost>                           
 
+	ProxyPass / http://localhost:80/ retry=0
+	ProxyPassReverse / http://localhost:80/
+	ProxyPreserveHost on
+	RequestHeader set X-Forwarded-Proto "https" early
+</VirtualHost>
