--- a/cookbooks/moodle_opsworks/templates/ssl.conf
+++ b/cookbooks/moodle_opsworks/templates/ssl.conf
@@ -23,3 +23,7 @@ Listen 443
 	ProxyPreserveHost on
 	RequestHeader set X-Forwarded-Proto "https" early
 </VirtualHost>
+
+RewriteEngine On
+RewriteCond %{HTTPS} off
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
