--- a/cookbooks/moodle_opsworks/templates/ssl-httpd.conf
+++ b/cookbooks/moodle_opsworks/templates/ssl-httpd.conf
@@ -46,8 +46,8 @@ Listen 80
 # Used instead of Redirect so that we don't have to hardcode the hostname
 #
 RewriteEngine On
-RewriteCond %{HTTPS} off
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+RewriteCond %{HTTPS} !=on
+RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -108,7 +108,7 @@ ServerAdmin root@localhost
 # <Directory> blocks below.
 #
 <Directory />
-    AllowOverride none
+    AllowOverride All
     Require all denied
 </Directory>
 
@@ -130,7 +130,7 @@ DocumentRoot "/var/www/html"
 # Relax access to content within /var/www.
 #
 <Directory "/var/www">
-    AllowOverride None
+    AllowOverride All
     # Allow open access:
     Require all granted
 </Directory>
@@ -156,7 +156,7 @@ DocumentRoot "/var/www/html"
     # It can be "All", "None", or any combination of the keywords:
     #   Options FileInfo AuthConfig Limit
     #
-    AllowOverride None
+    AllowOverride All
 
     #
     # Controls who can get stuff from this server.
